Adding base64 encoded fonts

--- a/app/styles/main.sass
+++ b/app/styles/main.sass
@@ -1,6 +1,6 @@
 $icon-font-path: '../fonts/bootstrap/'
 @import 'bootstrap/bootstrap.scss'
-@import 'fonts'
+@import 'fonts.scss'
 @import '_variables'
 @import 'reset'
 @import 'typography'
