getting slideout panel to work

--- a/app/styles/global.sass
+++ b/app/styles/global.sass
@@ -1,9 +1,10 @@
 html, body
-  overflow-x : hidden
+  height : 100%
 
 body
   background  : #fafafa
   color       : #444
+  position    : realtive
 
 hr
   background : #ebebeb
@@ -20,9 +21,29 @@ hr
 [x-ng-click]
   cursor : pointer
 
-@media screen and (max-width: 767px)
-  #wrapper.open
-    left : 240px
+.off-canvas-wrap
+  -webkit-backface-visibility : hidden
 
-  .open #menu-inner
-    left : 0
+  position : relative
+  width : 100%
+  overflow : hidden
+
+.inner-wrap
+  position : relative
+  width:100%
+  transition: transform 500ms ease
+
+.off-canvas-wrap.move-right
+  -webkit-overflow-scrolling : touch
+  min-height : 100%
+
+  > .inner-wrap
+    transform : translateX(240px)
+
+@media screen and (min-width: 768px)
+  .off-canvas-wrap
+    -webkit-overflow-scrolling : touch
+    min-height : 100%
+
+    > .inner-wrap
+      transform : translateX(240px)
