--- a/app/styles/typography.sass
+++ b/app/styles/typography.sass
@@ -1,7 +1,7 @@
-html
-  -webkit-font-smoothing : antialiased
-
 body
+  -webkit-font-smoothing : antialiased
+  -moz-osx-font-smoothing: grayscale
+
   font-size   : 12px
   font-family : 'apercuregular'
 
