Finished drag and drop

--- a/app/styles/section.sass
+++ b/app/styles/section.sass
@@ -1,3 +1,17 @@
 .full-section
   width: 100%
   float: left
+
+header
+  position : relative
+
+  .actions
+    position : absolute
+    top :50%
+    margin-top:-22px
+    right:0
+
+    i
+      padding : 10px
+      padding-left: 20px
+      padding-right : 0
