--- a/app/styles/typography.sass
+++ b/app/styles/typography.sass
@@ -26,9 +26,13 @@ h4
 a, a:hover
   color : $orange
 
-p
-  font-size   : 1.8em
-  line-height : 1.4em
+.editor
+  font-size : 1.8em
+  line-height: 1.4em
+
+.editor p
+  font-size   : 1em
+  line-height : 1em
 
 h4.header
   margin      : 28px 0 13px 0
