adding image component and making some styling changes

--- a/app/styles/TextComponent.sass
+++ b/app/styles/TextComponent.sass
@@ -11,6 +11,7 @@
   border  : 2px solid transparent
   position: relative
   margin-bottom : 20px
+  padding-bottom:70px
 
   .actions
     display:none
