--- a/app/styles/ListComponent.sass
+++ b/app/styles/ListComponent.sass
@@ -1,5 +1,7 @@
-.list
-  border: 2px dashed #ccc
-
 .files
   margin-bottom : 20px
+
+.dropzone
+  border: 2px dashed #ccc
+  padding:20px
+  color : #999
