--- a/app/styles/Content.sass
+++ b/app/styles/Content.sass
@@ -1,3 +1,10 @@
+#content
+  .search-in-progress
+    transition: all 0.2s ease-in
+    transform: scale(0.9)
+    opacity: 0.2
+    margin-top: -40px
+
 @media screen and (max-width: 600px)
   #content
     font-size : 9px
