finished delete prompt

--- a/app/styles/ListItemComponent.sass
+++ b/app/styles/ListItemComponent.sass
@@ -18,8 +18,17 @@
   .remove
     margin : 10px 10px 0 0
 
-  .icon
-    margin-top : 2px
+  .download
+    width : 28px
+    height : 28px
+    border-radius : 28px
+    background : $orange
+    text-align: center
+    vertical-align: middle
+    line-height: 28px
+
+    i
+      color : #fff
 
   .page
     width : 45px
@@ -69,7 +78,7 @@
         font-family : 'apercubold'
 
   .download
-    margin-top : 6px
+    margin-top : 4px
     cursor     : pointer
 
   .re-order
