--- a/app/styles/buttons.sass
+++ b/app/styles/buttons.sass
@@ -7,6 +7,10 @@
   i
     color : $white
 
+.btn-danger
+  i
+    color : $white
+
 .btn-orange:hover
   background-color : $orange
   border-color     : $orange
