finished toggle admin mode

--- a/app/styles/menu.sass
+++ b/app/styles/menu.sass
@@ -67,6 +67,9 @@
     .right
       right : 8px
 
+    .category-actions
+      margin-top : 20px
+
       .fa
         margin-left : 5px
 
@@ -74,8 +77,6 @@
       margin-left: 10px
     .fa-remove
       margin-top: 21px
-    .fa-reorder
-      margin-top: 24px
     .full-section
       .fa-remove, .fa-reorder
         margin-top: 0
