--- a/app/styles/NewSectionComponent.sass
+++ b/app/styles/NewSectionComponent.sass
@@ -1,4 +1,4 @@
-@import "_variables";
+@import "_variables"
 
 .new-section-component
   .add-new-section-component
@@ -8,7 +8,7 @@
   a
     color: $darkGrey
     padding: 20px
-    display:block
+    display: block
     cursor: pointer
     &:hover
       color: $orange
@@ -18,4 +18,4 @@
   .new-section-component-selector
     background-color: $grey
     h3
-      padding-top:10px
+      padding-top: 10px
