working on restyle and scrolling to sections

--- a/app/styles/buttons.sass
+++ b/app/styles/buttons.sass
@@ -14,3 +14,9 @@
 .btn-orange:hover
   background-color : $orange
   border-color     : $orange
+
+.btn-google
+  background-color : #dc4e41
+  color            : $white
+  &:hover
+    color : $white
