--- a/app/styles/logo.sass
+++ b/app/styles/logo.sass
@@ -1,9 +1,6 @@
 #logo
-  padding    : 40px 24px 37px 24px
-  text-align : center
-
-  img
-    margin-bottom : 14px
+  padding    : 17px 24px 17px 24px
+  border-bottom : 1px solid #ebebeb
 
   h4
     opacity : .5
