--- a/app/styles/TextComponent.sass
+++ b/app/styles/TextComponent.sass
@@ -18,18 +18,19 @@
     position : absolute
     bottom : 0
     right: 0
-    border : 2px solid $orange
+    border : 2px solid transparent
     border-bottom: 0
     border-right: 0
 
     .fa
-      color: $orange
       display: inline-block
       padding: 20px
-      &:first-child
-        border-right : 2px solid $orange
+      border-left : 2px solid transparent
 
   &:hover
     border : 2px solid $orange
     .actions
       display: block
+      border-top : 2px solid $orange
+      .fa
+        border-left : 2px solid $orange
